Fix header visibility

--- a/assets/css/openstgo.css
+++ b/assets/css/openstgo.css
@@ -25,6 +25,6 @@ nav::after {
 	margin: auto;
 }
 
-img.flag {
-	
+header h1 {
+	-webkit-text-stroke: 0.4px grey;
 }
